<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- music top -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/bg_rounded">

        <TextView
            style="@style/titleStyle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/music"
            android:textSize="20sp" />

    </RelativeLayout>

    <!-- music content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="620dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/dimen30"
            android:paddingBottom="60dp"
            android:paddingStart="@dimen/dimen50"
            android:paddingEnd="@dimen/dimen50">

            <!-- song 1 (Back Number - Shiawase) -->
            <TextView
                style="@style/titleSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shiawase"
                android:layout_marginBottom="@dimen/dimen10"
                android:textSize="12sp"
                android:textFontWeight="800"
                tools:targetApi="p" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="@dimen/dimen5"
                android:layout_marginBottom="@dimen/dimen20"
                android:clickable="false">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:videoId="ef-apJ7aTzw"
                    app:autoPlay="false" />

            </androidx.cardview.widget.CardView>

            <!-- song 2 (Kenshi Yonezhu - Lemon)-->
            <TextView
                style="@style/titleSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lemon"
                android:layout_marginTop="@dimen/dimen10"
                android:layout_marginBottom="@dimen/dimen10"
                android:textSize="12sp"
                android:textFontWeight="800"
                tools:targetApi="p" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="@dimen/dimen5"
                android:layout_marginBottom="@dimen/dimen20"
                android:clickable="false">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:videoId="clU8c2fpk2s"
                    app:autoPlay="false" />

            </androidx.cardview.widget.CardView>

            <!-- song 3 (Kenshi Yonezhu - Haiiro To Ao)-->
            <TextView
                style="@style/titleSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/haiirotoao"
                android:layout_marginTop="@dimen/dimen10"
                android:layout_marginBottom="@dimen/dimen10"
                android:textSize="12sp"
                android:textFontWeight="800"
                tools:targetApi="p" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="@dimen/dimen5"
                android:layout_marginBottom="@dimen/dimen20"
                android:clickable="false">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:videoId="ieGKMldpp-M"
                    app:autoPlay="false" />

            </androidx.cardview.widget.CardView>

            <!-- song 4 (Back Number - Happy Birthday)-->
            <TextView
                style="@style/titleSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hbd"
                android:layout_marginTop="@dimen/dimen10"
                android:layout_marginBottom="@dimen/dimen10"
                android:textSize="12sp"
                android:textFontWeight="800"
                tools:targetApi="p" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="@dimen/dimen5"
                android:layout_marginBottom="@dimen/dimen20"
                android:clickable="false">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:videoId="PYhCIS29gtc"
                    app:autoPlay="false" />

            </androidx.cardview.widget.CardView>

            <!-- song 5 -->
            <TextView
                style="@style/titleSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heroine"
                android:layout_marginTop="@dimen/dimen10"
                android:layout_marginBottom="@dimen/dimen10"
                android:textSize="12sp"
                android:textFontWeight="800"
                tools:targetApi="p" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="@dimen/dimen5"
                android:layout_marginBottom="@dimen/dimen20"
                android:clickable="false">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:videoId="saq0a2eG5y4"
                    app:autoPlay="false" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>